fix code syntax highlighting

--- a/public/404.html
+++ b/public/404.html
@@ -191,7 +191,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel="stylesheet" type= "text/css" href="./styles.css"><link rel="icon"
+<link rel="stylesheet" type= "text/css" href="./styles.css"><link rel="stylesheet" type= "text/css" href="./htmlize.css"><link rel="icon"
        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header>
 <img src="/images/waveforms.png"
      style=width:30px;display:inline;">
@@ -205,9 +205,9 @@
 <div id="content" class="content">
 <h1 class="title">LZ</h1>
 
-<div id="outline-container-orgf459b31" class="outline-2">
-<h2 id="orgf459b31">404 - page not found</h2>
-<div class="outline-text-2" id="text-orgf459b31">
+<div id="outline-container-orgeb7fadf" class="outline-2">
+<h2 id="orgeb7fadf">404 - page not found</h2>
+<div class="outline-text-2" id="text-orgeb7fadf">
 <p>
 my bad probably, i moved some stuff around. head <a href="https://larzeitlin.github.io">home</a> to find what you are looking for.
 </p>
