--- a/public/index.html
+++ b/public/index.html
@@ -191,7 +191,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel="stylesheet" type= "text/css" href="./styles.css"><link rel="icon"
+<link rel="stylesheet" type= "text/css" href="./styles.css"><link rel="stylesheet" type= "text/css" href="./htmlize.css"><link rel="icon"
        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header>
 <img src="/images/waveforms.png"
      style=width:30px;display:inline;">
@@ -204,7 +204,7 @@
 <body>
 <div id="content" class="content">
 <h1 class="title">LZ</h1>
-<p>
+<p align="center">
 hi im luke this is my blog
 </p>
 
@@ -319,14 +319,14 @@ hi im luke this is my blog
 </table>
 
 
-<div id="org6886461" class="figure">
+<div id="org930c34d" class="figure">
 <p><img src="images/waveforms.png" alt="waveforms.png" width="150" />
 </p>
 </div>
 
 
-<p>
-<a href="mailto:luke@lzeitlin.xyz">send me an email</a>
+<p align="center">
+<a href="mailto:luke@lzeitlin.xyz" align="center">send me an email</a>
 </p>
 </div>
 </body>
