--- a/public/how-this-blog-works.html
+++ b/public/how-this-blog-works.html
@@ -191,7 +191,7 @@
     { background-color: #ffff00; color: #000000; font-weight: bold; }
   .org-svg { }
 </style>
-<link rel="stylesheet" type= "text/css" href="./styles.css"><link rel="icon"
+<link rel="stylesheet" type= "text/css" href="./styles.css"><link rel="stylesheet" type= "text/css" href="./htmlize.css"><link rel="icon"
        href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👻</text></svg>"><header>
 <img src="/images/waveforms.png"
      style=width:30px;display:inline;">
@@ -208,20 +208,20 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org7e0d12b">How this blog works</a>
+<li><a href="#org0ffaca0">How this blog works</a>
 <ul>
-<li><a href="#org8cfc4e3">Org mode</a></li>
+<li><a href="#org0f0a737">Org mode</a></li>
 </ul>
 </li>
-<li><a href="#org730a8be">Github pages</a></li>
-<li><a href="#org7722c0d">Why I like this</a></li>
-<li><a href="#org5f5d947">Thanks</a></li>
+<li><a href="#org6475665">Github pages</a></li>
+<li><a href="#org0929c53">Why I like this</a></li>
+<li><a href="#orgdff5f02">Thanks</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org7e0d12b" class="outline-2">
-<h2 id="org7e0d12b">How this blog works</h2>
-<div class="outline-text-2" id="text-org7e0d12b">
+<div id="outline-container-org0ffaca0" class="outline-2">
+<h2 id="org0ffaca0">How this blog works</h2>
+<div class="outline-text-2" id="text-org0ffaca0">
 <p>
 Thought I'd share a few details about it because I've been looking for the right 
 blogging method for me, and finally I've fallen on something that I think will work 
@@ -229,9 +229,9 @@ nicely.
 </p>
 </div>
 
-<div id="outline-container-org8cfc4e3" class="outline-3">
-<h3 id="org8cfc4e3">Org mode</h3>
-<div class="outline-text-3" id="text-org8cfc4e3">
+<div id="outline-container-org0f0a737" class="outline-3">
+<h3 id="org0f0a737">Org mode</h3>
+<div class="outline-text-3" id="text-org0f0a737">
 <p>
 <a href="https://orgmode.org/">org</a> is a markup format that is associated with Emacs. The plaintext is very readable and there are some nice features for it built into Emacs. One such feature is the capability to render it to HTML.
 </p>
@@ -242,67 +242,67 @@ I have a directory called <code>content</code> which I keep all the <code>.org</
 
 
 <div class="org-src-container">
-<pre class="src src-elisp"><span style="color: #ffffff;">(</span>package-initialize<span style="color: #ffffff;">)</span>
-<span style="color: #ffffff;">(</span><span style="color: #b6a0ff;">unless</span> package-archive-contents
-  <span style="color: #ff62d4;">(</span>package-refresh-contents<span style="color: #ff62d4;">)</span><span style="color: #ffffff;">)</span>
+<pre class="src src-elisp"><span class="org-rainbow-delimiters-depth-1">(</span>package-initialize<span class="org-rainbow-delimiters-depth-1">)</span>
+<span class="org-rainbow-delimiters-depth-1">(</span><span class="org-keyword">unless</span> package-archive-contents
+  <span class="org-rainbow-delimiters-depth-2">(</span>package-refresh-contents<span class="org-rainbow-delimiters-depth-2">)</span><span class="org-rainbow-delimiters-depth-1">)</span>
 
-<span style="color: #ffffff;">(</span>package-install 'htmlize<span style="color: #ffffff;">)</span>
+<span class="org-rainbow-delimiters-depth-1">(</span>package-install 'htmlize<span class="org-rainbow-delimiters-depth-1">)</span>
 
-<span style="color: #ffffff;">(</span><span style="color: #b6a0ff;">require</span> '<span style="color: #00bcff;">ox-publish</span><span style="color: #ffffff;">)</span>
+<span class="org-rainbow-delimiters-depth-1">(</span><span class="org-keyword">require</span> '<span class="org-constant">ox-publish</span><span class="org-rainbow-delimiters-depth-1">)</span>
 
-<span style="color: #ffffff;">(</span><span style="color: #b6a0ff;">setq</span> org-html-validation-link nil
+<span class="org-rainbow-delimiters-depth-1">(</span><span class="org-keyword">setq</span> org-html-validation-link nil
       org-html-head-include-scripts nil
       org-html-head-include-default-style nil
-      org-html-head <span style="color: #ff62d4;">(</span>concat <span style="color: #79a8ff;">"&lt;link rel=\"stylesheet\" href=\"https://cdn.simplecss.org/simple.min.css\" /&gt;"</span>
-                            <span style="color: #79a8ff;">"&lt;link rel=\"icon\" href=\"data:image/svg+xml,&lt;svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22&gt;&lt;text y=%22.9em%22 font-size=%2290%22&gt;&#128123;&lt;/text&gt;&lt;/svg&gt;\"&gt;"</span><span style="color: #ff62d4;">)</span><span style="color: #ffffff;">)</span>
+      org-html-head <span class="org-rainbow-delimiters-depth-2">(</span>concat <span class="org-string">"&lt;link rel=\"stylesheet\" href=\"https://cdn.simplecss.org/simple.min.css\" /&gt;"</span>
+                            <span class="org-string">"&lt;link rel=\"icon\" href=\"data:image/svg+xml,&lt;svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22&gt;&lt;text y=%22.9em%22 font-size=%2290%22&gt;&#128123;&lt;/text&gt;&lt;/svg&gt;\"&gt;"</span><span class="org-rainbow-delimiters-depth-2">)</span><span class="org-rainbow-delimiters-depth-1">)</span>
 
-<span style="color: #ffffff;">(</span><span style="color: #b6a0ff;">setq</span> org-html-htmlize-output-type 'css<span style="color: #ffffff;">)</span>
+<span class="org-rainbow-delimiters-depth-1">(</span><span class="org-keyword">setq</span> org-html-htmlize-output-type 'css<span class="org-rainbow-delimiters-depth-1">)</span>
 
-<span style="color: #65737e; font-style: italic;">;; </span><span style="color: #a8a8a8; font-style: italic;">Define the publishing project</span>
-<span style="color: #ffffff;">(</span><span style="color: #b6a0ff;">setq</span> org-publish-project-alist
-      <span style="color: #ff62d4;">(</span>list
-       <span style="color: #3fdfd0;">(</span>list
-        <span style="color: #79a8ff;">"orgfiles"</span>
-        <span style="color: #f78fe7;">:recursive</span> t
-        <span style="color: #f78fe7;">:base-directory</span> <span style="color: #79a8ff;">"./content"</span>
-        <span style="color: #f78fe7;">:publishing-directory</span> <span style="color: #79a8ff;">"./"</span>
-        <span style="color: #f78fe7;">:publishing-function</span> 'org-html-publish-to-html
-        <span style="color: #f78fe7;">:with-author</span> nil
-        <span style="color: #f78fe7;">:include-toc</span> nil
-        <span style="color: #f78fe7;">:section-numbers</span> nil
-        <span style="color: #f78fe7;">:time-stamp-file</span> nil<span style="color: #3fdfd0;">)</span><span style="color: #ff62d4;">)</span><span style="color: #ffffff;">)</span>
+<span class="org-comment-delimiter">;; </span><span class="org-comment">Define the publishing project</span>
+<span class="org-rainbow-delimiters-depth-1">(</span><span class="org-keyword">setq</span> org-publish-project-alist
+      <span class="org-rainbow-delimiters-depth-2">(</span>list
+       <span class="org-rainbow-delimiters-depth-3">(</span>list
+        <span class="org-string">"orgfiles"</span>
+        <span class="org-builtin">:recursive</span> t
+        <span class="org-builtin">:base-directory</span> <span class="org-string">"./content"</span>
+        <span class="org-builtin">:publishing-directory</span> <span class="org-string">"./"</span>
+        <span class="org-builtin">:publishing-function</span> 'org-html-publish-to-html
+        <span class="org-builtin">:with-author</span> nil
+        <span class="org-builtin">:include-toc</span> nil
+        <span class="org-builtin">:section-numbers</span> nil
+        <span class="org-builtin">:time-stamp-file</span> nil<span class="org-rainbow-delimiters-depth-3">)</span><span class="org-rainbow-delimiters-depth-2">)</span><span class="org-rainbow-delimiters-depth-1">)</span>
 
-<span style="color: #65737e; font-style: italic;">;; </span><span style="color: #a8a8a8; font-style: italic;">Generate the site output</span>
-<span style="color: #ffffff;">(</span>org-publish-all t<span style="color: #ffffff;">)</span>
+<span class="org-comment-delimiter">;; </span><span class="org-comment">Generate the site output</span>
+<span class="org-rainbow-delimiters-depth-1">(</span>org-publish-all t<span class="org-rainbow-delimiters-depth-1">)</span>
 
-<span style="color: #ffffff;">(</span>message <span style="color: #79a8ff;">"Build complete!"</span><span style="color: #ffffff;">)</span>
+<span class="org-rainbow-delimiters-depth-1">(</span>message <span class="org-string">"Build complete!"</span><span class="org-rainbow-delimiters-depth-1">)</span>
 </pre>
 </div>
 </div>
 </div>
 </div>
 
-<div id="outline-container-org730a8be" class="outline-2">
-<h2 id="org730a8be">Github pages</h2>
-<div class="outline-text-2" id="text-org730a8be">
+<div id="outline-container-org6475665" class="outline-2">
+<h2 id="org6475665">Github pages</h2>
+<div class="outline-text-2" id="text-org6475665">
 <p>
 With a few click <a href="https://docs.github.com/en/pages/getting-started-with-github-pages/creating-a-github-pages-site">Github Pages</a> can be set up to serve static content in a repo. It detects the <code>index.html</code>, which is made from the <code>index.org</code> file, which then links to the other files. You can <a href="https://github.com/larzeitlin/blog">see the repo here</a>.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org7722c0d" class="outline-2">
-<h2 id="org7722c0d">Why I like this</h2>
-<div class="outline-text-2" id="text-org7722c0d">
+<div id="outline-container-org0929c53" class="outline-2">
+<h2 id="org0929c53">Why I like this</h2>
+<div class="outline-text-2" id="text-org0929c53">
 <p>
 I've tried various platforms and static site blog generators (Jekyll, Hugo), as well as building more complicated things from scratch in ClojureScript. These all felt they had too much unnecessary complexity. I considered going fully the other way - just writing it directly into HTML. That's tempting but it's just a bit too unpleasant to read while writing, and a little bit less portable if I want to change to another system in the future. This a happy compromise where it's pretty transparent and flexible while staying really simple.
 </p>
 </div>
 </div>
 
-<div id="outline-container-org5f5d947" class="outline-2">
-<h2 id="org5f5d947">Thanks</h2>
-<div class="outline-text-2" id="text-org5f5d947">
+<div id="outline-container-orgdff5f02" class="outline-2">
+<h2 id="orgdff5f02">Thanks</h2>
+<div class="outline-text-2" id="text-orgdff5f02">
 <p>
 This was pretty much copied from the <a href="https://systemcrafters.net/publishing-websites-with-org-mode/building-the-site/">System Crafters</a> website. So thanks to David over there for that and all his great content about Emacs.
 </p>
